Hopefully fixed off centered rareroom logo on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -121,6 +121,10 @@ main > div > span > span > img {
   width: 100%;
   height: 100%;
   object-fit: contain;
+  min-width: none;
+  min-height: none;
+  max-width: 100vw;
+  max-height: 100vh;
 }
 
 main > div #content {
